--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "chalk": "^5.6.2",
+    "commander": "^14.0.1",
+    "ejs": "^3.1.10",
+    "inquirer": "^12.9.6"
+  },
+  "devDependencies": {
+    "@types/node": "^24.7.0"
+  }
 }
