--- a/package.json
+++ b/package.json
@@ -1,21 +1,36 @@
 {
-  "name": "express-start",
+  "name": "create-express-start",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsx watch src/index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "cli",
+    "express",
+    "typescript",
+    "scaffold"
+  ],
+  "author": "Ahmad Rabiu",
+  "license": "MIT",
+  "description": "Scaffold Express.js projects with wizard and prototype utils",
   "dependencies": {
     "chalk": "^5.6.2",
     "commander": "^14.0.1",
     "ejs": "^3.1.10",
+    "fs-extra": "^11.3.2",
     "inquirer": "^12.9.6"
   },
   "devDependencies": {
-    "@types/node": "^24.7.0"
+    "@types/ejs": "^3.1.5",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^24.7.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
+  },
+  "bin": {
+    "create-express-start": "dist/index.js"
   }
 }
