--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "create-express-start",
   "version": "0.1.0",
   "main": "dist/index.js",
+  "bin": {
+    "create-express-start": "dist/bin.js"
+  },
+  "files": [
+    "dist",
+    "templates"
+  ],
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "cli",
@@ -33,8 +41,5 @@
     "@types/node": "^24.7.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
-  },
-  "bin": {
-    "create-express-start": "dist/index.js"
   }
 }
